tests/errors/unfinished_number_with_different_base.ne
function main(): int32
{
    return 0;
}
0b